ACTIN-31: Restrict Lonsurf based on trifluridine history and detect left-sided tumors